--- a/themes/minions_white.scss
+++ b/themes/minions_white.scss
@@ -100,6 +100,11 @@ section.has-dark-background {
     margin-right: 20px;
 }
 
+.reveal .credits {
+    text-align: right;
+    font-size: 0.3em;
+}
+
 body:after {
   content: url(/images/logo.png);
   transform: scale(.1);
